# resume-rag-analyzer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: ats.py  config.py  embeddings.py  llm.py  prompts.py  rag_pipeline.py  resume_parser.py  skill_matcher.py  utils.py
src/ui/: components.py
